--- a/lib/generators/templates/config.vhost.erb
+++ b/lib/generators/templates/config.vhost.erb
@@ -1,5 +1,5 @@
 upstream <%= name %>_server {
-    unix:/var/www/<%= name %>/shared/unicorn.sock fail_timeout=0;
+    server unix:/var/www/<%= name %>/shared/unicorn.sock fail_timeout=0;
 }
 
 server {
